tests/baselines/reference/primitiveTypeAsmoduleName.errors.txt
==== tests/cases/compiler/primitiveTypeAsmoduleName.ts (1 errors) ====
    module string {}
           ~~~~~~
!!! error TS1060: Module name cannot be 'string'.